Fix overscroll past footer on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,12 @@
 
 html {
   overflow-x: hidden;
+  overscroll-behavior: none;
 }
 
 body {
   max-width: 100%;
-  overscroll-behavior-y: none;
+  overscroll-behavior: none;
 }
 
 :root {
